--- a/DotNetNote/Views/FormValidationDemo/ClientValidation.cshtml
+++ b/DotNetNote/Views/FormValidationDemo/ClientValidation.cshtml
@@ -34,9 +34,9 @@
     <input type="submit" value="전송" />
 }
 
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery.js"></script>
+<script src="~/lib/jquery.validate.js"></script>
 <script src=
-"~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+"~/lib/jquery.validate.unobtrusive.js"></script>
 </body>
 </html>
